--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start" : "node index.js"
+ "start": "npx puppeteer browsers install chrome && node index.js"
   },
   "keywords": [],
   "author": "",
